сетка главной страницы 1

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,12 @@
 body {
-	color: #000000;
-	font-family: "PT Sans","Arial" sans-serif;
+	margin: 0;
+	padding: 0;
+	color: #333333;
+	font-family: "PT Sans","Arial";
 	font-size: 14px;
-	line-height: 26px;
-	font-weight: bold;
+	line-height: 21px;
+	font-weight: 400;
 	text-transform: uppercase;
-}
-.main-title{
-	font-size: 21px;
 }
 .main-title p, .benefits-title p, .feautures-item p, .benefits p{
 	font-weight: normal;
@@ -23,4 +22,196 @@ h2 {
 }
 .offer-title p{
 	line-height: 24px;
+}
+
+.clearfix::after {
+	content: "";
+    display: table;
+    clear: both;
+}
+
+.container {
+	width: 1200px;
+	margin: 0 auto;
+}
+
+.wrapper {
+	padding-left: 72px;
+	padding-right: 72px;
+}
+
+.main-nav {
+	position: relative;
+}
+
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+.main-nav li {
+	float: left;
+	width: 128px;
+	padding-top: 16px;
+	padding-bottom: 16px;
+	font-weight: 700;
+}
+
+.main-nav li:first-child {
+	margin-right: 112px;
+}
+
+.main-nav li:nth-child(2) {
+	margin-right: 355px;
+}
+
+.main-nav li:last-child {
+	float: right;
+	text-align: right;
+}
+.main-nav a{
+	color: black;
+	text-decoration: none;
+}
+.logo {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+.intro{
+	box-sizing: content-box;
+	margin: 0 auto;
+	width: 1200px;
+  height: 508px;
+	background-image: url("../img/sedona-words.png"), url("../img/background-mask.png"), url("../img/background-index.jpg");
+	background-repeat: no-repeat;
+	background-position: center 132px, center 451px, center 56px;
+	background-size: 457px, 1200px, 1200px;
+
+
+}
+
+.main-title {
+	font-size: 21px;
+	line-height: 26px;
+	color: #000000;
+	font-weight: 700;
+	text-align: center;
+	padding-left: 382px;
+	padding-right: 382px;
+	padding-top: 60px;
+	padding-bottom: 15px;
+}
+p {
+	text-align: center;
+}
+
+.benefits {
+	text-align: center;
+}
+
+.benefits-text{
+	float: left;
+	width: 400px;
+	height: 256px;
+	background-color: #81b3d2;
+}
+
+.benefits-image{
+	float: right;
+	width: 800px;
+}
+
+.feautures-item {
+	float: left;
+	width: 400px;
+}
+
+.feautures-item :last-child {
+	float: right;
+	width: 400px;
+}
+
+
+.benefits-text :last-child {
+	float: right;
+	width: 400px;
+}
+
+.feature-text{
+	float: left;
+	width: 400px;
+}
+
+.feature-text{
+	float: left;
+	width: 400px;
+}
+
+.feature-text:last-child {
+	float: right;
+	width: 400px;
+}
+
+.offer {
+	text-align: center;
+}
+
+.offer-btn btn {
+	text-decoration: none;
+	font-size: 21px;
+}
+.map{
+	position: relative;
+}
+}
+form{
+	margin: 0 auto;
+	position:absolute;
+	bottom:198px;
+	width: 568px;
+	height: 282px;
+	background-color: white;
+
+}
+
+.hotel-search{
+	text-align: left;
+	width: 572px;
+	margin: 0 auto;
+
+}
+.footer-index {
+	font-size: 0;
+	text-align: center;
+	padding-right: 72px;
+	padding-left: 72px;
+}
+
+
+.hashtag {
+	display: inline-block;
+	vertical-align: top;
+	font-size: 21px;
+	float: left;
+	width: 240px;
+	margin-right: 88px;
+}
+
+
+.social {
+	display: inline-block;
+	vertical-align: middle;
+	float: left;
+	width: 400px;
+}
+
+.copyright{
+	display: inline-block;
+	vertical-align: middle;
+	float: right;
+	width: 240px;
 }
