--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,42 @@ p {
 	float: right;
 	width: 66.6667%;
 }
+.features .feautures-title-house::before {
+    content: "";
+    display: block;
+    width: 80px;
+    height: 76px;
+    margin: 0 auto;
+    margin-bottom: 15px;
+    background-image: url("../img/sprite.png");
+    background-repeat: no-repeat;
+    background-position: -3px -767px;
+}
+
+.features .feautures-title-food::before {
+    content: "";
+    display: block;
+    width: 80px;
+    height: 76px;
+    margin: 0 auto;
+    margin-bottom: 15px;
+    background-image: url("../img/sprite.png");
+    background-repeat: no-repeat;
+     background-position: 1px -686px;
+}
+
+.features .feautures-title-souvenir::before {
+    content: "";
+    display: block;
+    width: 80px;
+    height: 76px;
+    margin: 0 auto;
+    margin-bottom: 15px;
+    background-image: url("../img/sprite.png");
+    background-repeat: no-repeat;
+    background-position: 0 -955px
+}
+
 .feautures{
 	height: 256px;
 }
@@ -183,7 +219,7 @@ p {
 	float: left;
 	text-align: center;
 	width: 33.3334%;
-  padding-top: 138px;
+  padding-top: 20px;
   padding-left: 55px;
   padding-right: 55px;
 	margin-bottom: 67px;
@@ -250,25 +286,210 @@ p {
 	background-repeat: no-repeat;
 	width: 100%;
 	height: 748px;
-	margin-top: 0px;
+	background-size: cover;
 }
 
 footer{
 	position: relative;
 }
-.hotel-search{
-	position:absolute;
-	z-index: 2;
-	top: 50%;
-	left: 50%;
-	background-color: #fff;
-	width: 568px;
-	margin-left: -284px;
-	margin-top: -292px;
+
+.hotel-search {
+  position: absolute;
+  width: 460px;
+  padding: 55px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background-color: #ffffff;
+  box-shadow: 0px 11px 35px 0px rgba(0, 0, 0, 0.2);
 }
 
-.hotel-search-row{
-padding: 30px 50px;
+.hotel-search-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  width: 460px;
+}
+
+.hotel-search input {
+  width: 299px;
+  height: 26px;
+  margin: 0;
+  margin-bottom: 30px;
+  padding-top: 6px;
+  padding-right: 35px;
+  padding-bottom: 6px;
+  padding-left: 12px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 26px;
+  color: #000000;
+  text-transform: uppercase;
+  background-color: #f2f2f2;
+  border: none;
+  outline: none;
+}
+
+.hotel-search input:hover {
+  background-color: #ebebeb;
+}
+
+.hotel-search input:focus{
+  padding-top: 4px;
+  padding-right: 33px;
+  padding-bottom: 4px;
+  padding-left: 10px;
+  background-color: #ffffff;
+  border: 2px solid #e5e5e5;
+}
+
+.hotel-search label {
+  width: 92px;
+  margin-right: 20px;
+  font-weight: 700;
+}
+
+.hotel-search-row:last-of-type input {
+  width: 50px;
+  margin: 0;
+  padding: 6px 32px;
+  text-align: center;
+}
+
+.hotel-search-row:last-of-type input:focus {
+  padding: 4px 30px;
+}
+
+.hotel-search-row:last-of-type label[for=adult] {
+  margin-right: 39px;
+}
+
+.hotel-search-row:last-of-type label[for=child] {
+  margin-right: 25px;
+	margin-left: 48px;
+}
+
+.hotel-search-row .calendar-arrival,
+.hotel-search-row .calendar-leaving {
+  position: absolute;
+  width: 22px;
+  height: 22px;
+  background-color: #f2f2f2;
+  background: url("../img/sprite.png") no-repeat;
+  background-position: -5px -420px;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.hotel-search-row .calendar-arrival {
+  top: 63px;
+  right: 65px;
+}
+
+.hotel-search-row .calendar-leaving {
+  top: 130px;
+  right: 65px;
+}
+
+.hotel-search-row .calendar-arrival:hover,
+.hotel-search-row .calendar-leaving:hover {
+  background-position: -5px -484px;
+}
+
+.hotel-search-row .calendar-arrival:active,
+.hotel-search-row .calendar-leaving:active {
+  background-position: -5px -452px;
+}
+
+.field-wrapper-half .add-adult,
+.field-wrapper-half .add-child,
+.field-wrapper-half .reduce-adult,
+.field-wrapper-half .reduce-child {
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  background-color: #f2f2f2;
+  background: url("../img/sprite.png") no-repeat;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.field-wrapper-half .reduce-adult,
+.field-wrapper-half .reduce-child {
+  background-position: -3px -845px;
+  margin-left: 10px;
+  bottom: 179px;
+}
+
+.field-wrapper-half .reduce-adult {
+  left: 168px;
+}
+
+.field-wrapper-half .reduce-child {
+  right: 145px;
+}
+
+.field-wrapper-half .reduce-adult:hover,
+.field-wrapper-half .reduce-child:hover {
+  background-position: -3px -871px;
+}
+
+.field-wrapper-half .reduce-adult:active,
+.field-wrapper-half .reduce-child:active {
+  background-position: -3px -858px;
+}
+
+.field-wrapper-half .add-adult,
+.field-wrapper-half .add-child {
+  background-position: -3px -890px;
+  margin-left: 86px;
+  bottom: 178px;
+}
+
+.field-wrapper-half .add-adult {
+  left: 168px;
+}
+
+.field-wrapper-half .add-child {
+  right: 66px;
+}
+
+.field-wrapper-half .add-adult:hover,
+.field-wrapper-half .add-child:hover {
+  background-position: -3px -932px;
+}
+
+.field-wrapper-half .add-adult:active,
+.field-wrapper-half .add-child:active {
+  background-position: -3px -911px;
+}
+
+.search-form-btn {
+  margin-top: 52px;
+  padding: 17px 197px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 26px;
+  color: #ffffff;
+  text-transform: uppercase;
+  background-color: #81b3d2;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.search-form-btn:hover {
+  color: #ffffff;
+  background-color: #669ec0;
+}
+
+.search-form-btn:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #5496bd;
 }
 
 .footer-index, .footer-inner {
@@ -280,11 +501,13 @@ padding: 30px 50px;
 
 .footer-index{
 	position: absolute;
-	bottom: 0;
+  bottom: 0;
 	left: 0;
 	width: 100%;
-	background: rgba(255, 255, 255, 0.9);
 	box-sizing: border-box;
+	background-color: rgba(255, 255, 255, 0.9);
+  padding-top: 34px;
+  padding-bottom: 37px;
 }
 .hashtag {
 	display: inline-block;
@@ -295,27 +518,91 @@ padding: 30px 50px;
 	width: 33.334%;
 	margin-left: 0px;
 }
-
+a{
+	color: black;
+}
 .social {
 	display: inline-block;
 	vertical-align: middle;
-	font-size: 14px;
-	text-align: center;
 	width: 33.334%;
-}
-.copyright{
-	display: inline-block;
-	text-align: right;
-	width: 33.334%;
-}
-.copyright a{
-	display: inline-block;
-	vertical-align: middle;
 
 }
-.copyright p{
+
+.social-btn-tw{
+	background-image: url("../img/sprite.png");
+	background-repeat: no-repeat;
+	display: inline-block;
+	width: 46px;
+  height: 48px;
+	margin-left: 10px;
+  background-position: -5px -1040px;
+}
+
+.social-btn-tw:hover {
+  background-position: -5px -1156px;
+}
+
+.social-btn-tw:active {
+  background-position: -5px -1098px;
+}
+.social-btn-fb{
+	background-image: url("../img/sprite.png");
+	background-repeat: no-repeat;
+  background-position: -5px -516px;
+	display: inline-block;
+	width: 46px;
+	height: 48px;
+	margin-left: 10px;
+}
+.social-btn-fb:hover {
+  background-position: -6px -632px;
+}
+
+.social-btn-fb:active {
+  background-position: -6px -574px;
+}
+.social-btn-ytube{
+	background-image: url("../img/sprite.png");
+	background-repeat: no-repeat;
+  background-position: -5px -1214px;
+	display: inline-block;
+	width: 46px;
+	height: 48px;
+	margin-left: 10px;
+}
+.social-btn-ytube:hover {
+  background-position: -5px -1330px;
+}
+.social-btn-ytube:active {
+  background-position: -5px -1272px;
+}
+
+.copyright {
+	display: inline-block;
+	vertical-align: middle;
+	width: 33.334%;
+
+}
+.copyright span{
+  margin-right: 7px;
 	font-size: 14px;
-	padding-bottom: 40px;
+}
+
+.copyright a {
+  display: inline-block;
+  vertical-align: top;
+  width: 113px;
+  height: 39px;
+  background: url("../img/sprite.png") no-repeat;
+  background-position: -5px -5px;
+}
+
+.copyright a:hover {
+  background-position: -5px -103px;
+}
+
+.copyright a:active {
+  background-position: -5px -54px;
 }
 
 
@@ -349,15 +636,36 @@ form{
   font-weight: bold;
   text-align: left;
  }
-.filter-group label:before{
+input[type="checkbox"] + label::before{
 	position: absolute;
 	content: "";
 	left: 0;
 	top: 23px;
-	width: 20px;
-	height: 20px;
-	border: 1px solid #fff;
-	border-radius: 5px;
+	width: 30px;
+	height: 22px;
+	background-image: url("../img/sprite.png");
+  background-repeat: no-repeat;
+  background-position: 0 -325px;
+	position: absolute;
+  left: 0;
+}
+input[type="checkbox"]:checked + label::before {
+    content: "";
+    width: 30px;
+    height: 22px;
+    display: block;
+    background-image: url("../img/sprite.png");
+    background-repeat: no-repeat;
+    background-position: 0px -293px;
+    position: absolute;
+    left: 0;
+}
+input[type="checkbox"]:disabled  + label::before {
+  background-position: 0 -388px;
+}
+
+input[type="checkbox"]:checked:disabled  + label::after {
+  background-position: 0 -356px;
 }
  .filter-group label{
 	display: block;
@@ -367,11 +675,12 @@ form{
 	padding-left: 40px;
 	position: relative;
 	padding-top: 24px;
+
 	}
 
-.filter-group input{
-	display: none;
-}
+	input[type="checkbox"] {
+	  display: none;
+	}
 .filter-cost {
   width: 315px;
   color: #ffffff;
@@ -535,13 +844,46 @@ form{
 	padding-right: 35px;
 }
 
-.sort-arrows{
-	float: right;
+.sort-arrows {
+  position: relative;
+  width: 34px;
+  height: 11px;
+  margin-left: auto;
+}
+
+.icon-up {
+  position: absolute;
+  width: 11px;
+  height: 10px;
+  bottom: 0;
+  left: 0;
+  background: url("../img/sprite.png") no-repeat;
+  background-position: -5px -152px;
+}
+
+.icon-up:hover {
+  background-position: -5px -192px;
+}
+
+.icon-up:active {
+  background-position: -5px -172px;
+}
+
+.icon-down {
+  position: absolute;
+  width: 11px;
+  height: 10px;
+  top: 0;
+  right: 0;
+  background: url("../img/sprite.png") no-repeat;
+  background-position: -5px -232px;
 }
 
 .hotel-item{
 	padding: 30px 6%;
 	padding-bottom: 5px;
+	border-top: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .hotel-image{
@@ -588,6 +930,41 @@ p{
 	background-color: #766357;
 }
  .hotel-rating{
- 	float: right;
- 	background-color: #eeeeee;
- }
+    display: flex;
+    align-items: flex-end;
+    position: relative;
+		float: right;
+}
+
+.hotel-rating-count {
+    display: inline-block;
+    width: 110px;
+    height: 27px;
+    background-color: #F2F2F2;
+    color: #666666;
+    text-align: center;
+    padding-top: 3px;
+    box-sizing: border-box;
+
+}
+
+.hotel-stars:before {
+    content: "";
+    width: 91px;
+    height: 20px;
+    background-image: url("../img/sprite.png");
+    background-repeat: repeat-x;
+		background-position: -5px -1388px;
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.hotel-stars:nth-child(2)::before {
+    width: 66px;
+}
+
+.hotel-stars:nth-child(3)::before {
+    width: 43px;
+}
