--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ ul {
 	padding-left: 6%;
 	padding-right: 6%;
 	padding-bottom: 19px;
-	padding-top: 9px;
+	padding-top: 15px;
 
 }
 
@@ -81,13 +81,17 @@ ul {
 .main-nav li:nth-child(1),.main-nav li:nth-child(2){
 	text-align: left;
 }
-
+.main-nav li:nth-child(1){
+	margin-right: 2.8%;
+}
 .main-nav li:nth-child(3),.main-nav li:nth-child(4){
 	text-align: right;
 }
-
+.main-nav li:nth-child(3){
+	margin-right: 3.2%;
+}
 .main-nav li:nth-child(2){
-	margin-right: 20%;
+	margin-right: 14%;
 }
 
 .main-nav a {
@@ -133,19 +137,19 @@ background: url("../img/background-index.jpg") no-repeat;
 	color: #000000;
 	font-weight: 700;
 	text-align: center;
-	padding-left: 382px;
-	padding-right: 382px;
+	padding-left: 377px;
+	padding-right: 380px;
 	padding-top: 46px;
 	padding-bottom: 16px;
 }
 p {
 	text-align: center;
-	padding-bottom: 10px;
 	padding-bottom: 40px;
+
 }
 
 .benefits {
-	height: 256px;
+height: 256px;
 	text-align: center;
 	background-color: #81b3d2;
 }
@@ -154,7 +158,6 @@ p {
 	box-sizing: border-box;
 	float: left;
 	width: 33.3334%;
-	height: 256px;
 	color: white;
 	padding-top: 29px;
 	padding-left: 58px;
@@ -164,6 +167,7 @@ p {
 	padding-left: 80px;
 	padding-right: 80px;
 	margin-bottom: 24px;
+	word-break: break-word;
 }
 .benefits p{
 	margin-top: 21px;
@@ -173,13 +177,14 @@ p {
 	float: right;
 	width: 66.6667%;
 }
+
 .features .feautures-title-house::before {
     content: "";
     display: block;
     width: 80px;
     height: 76px;
     margin: 0 auto;
-    margin-bottom: 15px;
+    margin-bottom: 28px;
     background-image: url("../img/sprite.png");
     background-repeat: no-repeat;
     background-position: -3px -767px;
@@ -191,7 +196,7 @@ p {
     width: 80px;
     height: 76px;
     margin: 0 auto;
-    margin-bottom: 15px;
+    margin-bottom: 28px;
     background-image: url("../img/sprite.png");
     background-repeat: no-repeat;
      background-position: 1px -686px;
@@ -203,33 +208,28 @@ p {
     width: 80px;
     height: 76px;
     margin: 0 auto;
-    margin-bottom: 15px;
+    margin-bottom: 28px;
     background-image: url("../img/sprite.png");
     background-repeat: no-repeat;
     background-position: 0 -955px
 }
 
-.feautures{
-	height: 256px;
-}
-
 .feautures-item{
 	box-sizing: border-box;
-	height: 256px;
 	float: left;
 	text-align: center;
 	width: 33.3334%;
-  padding-top: 20px;
-  padding-left: 55px;
+  padding-top: 34px;
+  padding-left: 51px;
   padding-right: 55px;
-	margin-bottom: 67px;
+	margin-bottom: 29px;
 }
 
 .feautures-item p{
-	margin-top: 23px;
+	margin-top: 22px;
 }
 .benefits-second{
-	height: 256px;
+  height: 256px;
 	text-align: center;
 	background-color: #81b3d2;
 }
@@ -238,16 +238,16 @@ p {
 	box-sizing: border-box;
 	float: right;
 	width: 33.3334%;
-	height: 256px;
 	color: white;
 	padding-top: 29px;
 	padding-left: 40px;
 	padding-right: 40px;
 }
 .benefits-second-title{
-	padding-left: 65px;
-	padding-right: 65px;
+	padding-left: 86px;
+	padding-right: 86px;
 	margin-bottom: 24px;
+	word-break: break-word;
 }
 .benefits-second p{
 	margin-top: 21px;
@@ -277,20 +277,27 @@ p {
 	text-align: center;
 }
 .offer p{
-	margin-top: 28px;
+	max-width: 450px;
+	margin-top: 26px;
 	margin-bottom: 10px;
+	margin-left: 31.2%;
 }
 
-.map{
-	background: url("../img/map.jpg");
-	background-repeat: no-repeat;
-	width: 100%;
-	height: 748px;
-	background-size: cover;
-}
+
 
 footer{
 	position: relative;
+}
+@keyframes bounce {
+  0%{transform: translateY(-395px);}
+	100%{transform: translateY(0);}
+}
+.hotel-search-animation{
+	animation-name: bounce;
+	animation-duration: 0.6s;
+}
+.hotel-search-closed {
+display: none;
 }
 
 .hotel-search {
@@ -495,7 +502,7 @@ footer{
 .footer-index, .footer-inner {
 	font-size: 0;
 	padding:0 6%;
-	margin-top: 18px;
+	margin-top: 31px;
 	text-align: center;
 }
 
@@ -506,8 +513,13 @@ footer{
 	width: 100%;
 	box-sizing: border-box;
 	background-color: rgba(255, 255, 255, 0.9);
-  padding-top: 34px;
-  padding-bottom: 37px;
+  padding-top: 33px;
+  padding-bottom: 40px;
+	overflow: hidden;
+}
+.footer-inner{
+	padding-top: 5px;
+  padding-bottom: 7px;
 }
 .hashtag {
 	display: inline-block;
@@ -516,16 +528,15 @@ footer{
 	font-size: 21px;
 	text-align: center;
 	width: 33.334%;
-	margin-left: 0px;
 }
-a{
+.hashtag a{
 	color: black;
+	font-weight: 700;
 }
 .social {
 	display: inline-block;
 	vertical-align: middle;
 	width: 33.334%;
-
 }
 
 .social-btn-tw{
@@ -534,7 +545,6 @@ a{
 	display: inline-block;
 	width: 46px;
   height: 48px;
-	margin-left: 10px;
   background-position: -5px -1040px;
 }
 
@@ -552,7 +562,7 @@ a{
 	display: inline-block;
 	width: 46px;
 	height: 48px;
-	margin-left: 10px;
+	margin-left: 6px;
 }
 .social-btn-fb:hover {
   background-position: -6px -632px;
@@ -568,7 +578,7 @@ a{
 	display: inline-block;
 	width: 46px;
 	height: 48px;
-	margin-left: 10px;
+	margin-left: 6px;
 }
 .social-btn-ytube:hover {
   background-position: -5px -1330px;
@@ -581,6 +591,7 @@ a{
 	display: inline-block;
 	vertical-align: middle;
 	width: 33.334%;
+	text-align: center;
 
 }
 .copyright span{
@@ -639,15 +650,14 @@ form{
 input[type="checkbox"] + label::before{
 	position: absolute;
 	content: "";
-	left: 0;
-	top: 23px;
+	left: -5px;
+	top: 25px;
 	width: 30px;
 	height: 22px;
 	background-image: url("../img/sprite.png");
   background-repeat: no-repeat;
   background-position: 0 -325px;
 	position: absolute;
-  left: 0;
 }
 input[type="checkbox"]:checked + label::before {
     content: "";
@@ -658,7 +668,7 @@ input[type="checkbox"]:checked + label::before {
     background-repeat: no-repeat;
     background-position: 0px -293px;
     position: absolute;
-    left: 0;
+
 }
 input[type="checkbox"]:disabled  + label::before {
   background-position: 0 -388px;
@@ -674,7 +684,7 @@ input[type="checkbox"]:checked:disabled  + label::after {
   text-align: left;
 	padding-left: 40px;
 	position: relative;
-	padding-top: 24px;
+	padding-top: 25px;
 
 	}
 
@@ -716,12 +726,13 @@ input[type="checkbox"]:checked:disabled  + label::after {
   line-height: 32px;
   vertical-align: top;
   cursor: pointer;
+	padding-right: 14px;
 }
 
 .price-controls .min-price,
 .price-controls .max-price {
   width: 90px;
-  padding-left: 65px;
+  padding-left: 46px;
 }
 .price-controls input {
   width: 60px;
@@ -734,32 +745,29 @@ input[type="checkbox"]:checked:disabled  + label::after {
 
 .range-controls {
   position: relative;
-  margin-bottom: 34px;
+  margin-bottom: 33px;
 }
 
 .range-controls .scale {
   height: 2px;
-
   background: rgba(255, 255, 255, 0.3);
 }
 .range-controls .bar {
   width: 80%;
   height: 2px;
-
   background: #ffffff;
 }
 
 .range-toggle {
 	position: absolute;
- top: -9px;
+  top: -9px;
   width: 4px;
   height: 4px;
-
   background: #ababab;
   border: 8px solid #ffffff;
 	border-radius: 50%;
- box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
- cursor: pointer;
+  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  cursor: pointer;
 }
 
 .range-toggle:hover {
@@ -777,13 +785,11 @@ input[type="checkbox"]:checked:disabled  + label::after {
 .btn-transparent {
   display: block;
   margin: 0 auto;
-  padding: 6px 35px;
-
+  padding: 6px 34px;
   font-size: 14px;
   line-height: 20px;
   color: #ffffff;
   text-transform: uppercase;
-
   background: transparent;
   border: 2px solid #ffffff;
   border-radius: 2px;
@@ -798,7 +804,7 @@ input[type="checkbox"]:checked:disabled  + label::after {
 
 .sort {
 	font-size: 0;
-	padding: 43px 6% 32px;
+	padding: 43px 6% 31px;
 }
 
 .sort-title{
@@ -838,12 +844,18 @@ input[type="checkbox"]:checked:disabled  + label::after {
 }
 
 .sort-buy a{
-	color: #81b3d2;
+	color: #000000;
+  opacity: 0.3;
+  border-bottom: 1px dotted #81b3d2;
 	font-size: 12px;
 	float: left;
-	padding-right: 35px;
+	margin-right: 35px;
 }
-
+.sort-buy a:first-of-type{
+	color: #81b3d2;
+  opacity: 1;
+  border: none;
+}
 .sort-arrows {
   position: relative;
   width: 34px;
@@ -855,7 +867,7 @@ input[type="checkbox"]:checked:disabled  + label::after {
   position: absolute;
   width: 11px;
   height: 10px;
-  bottom: 0;
+  top: 10px;
   left: 0;
   background: url("../img/sprite.png") no-repeat;
   background-position: -5px -152px;
@@ -873,7 +885,7 @@ input[type="checkbox"]:checked:disabled  + label::after {
   position: absolute;
   width: 11px;
   height: 10px;
-  top: 0;
+  top: 10px;
   right: 0;
   background: url("../img/sprite.png") no-repeat;
   background-position: -5px -232px;
@@ -881,18 +893,23 @@ input[type="checkbox"]:checked:disabled  + label::after {
 
 .hotel-item{
 	padding: 30px 6%;
-	padding-bottom: 5px;
+	padding-bottom: 24px;
 	border-top: 1px solid #e5e5e5;
-  border-bottom: 1px solid #e5e5e5;
+}
+
+.hotel-item:last-child{
+	border-top: 1px solid #e5e5e5;
+	border-bottom: 1px solid #e5e5e5;
 }
 
 .hotel-image{
 	float: left;
-	margin-right:32px;
+	margin-right:30px;
 }
 
 .hotel-info{
-	display: block;
+	float: left;
+	margin-top: -3px;
 }
 
 .hotel-title{
@@ -903,18 +920,16 @@ input[type="checkbox"]:checked:disabled  + label::after {
 }
 
 .hotel-info-part{
-	width: 118px;
   float: left;
-	margin-top: 13px;
+	margin-top: 9px;
+	margin-right: 7px;
 }
 .hotel-info-part p{
 	margin: 0;
 	text-align: left;
+	padding-bottom: 17px;
 }
-p{
-	text-align: center;
-	padding-bottom: 10px;
-}
+
  .hotel-info-part a{
 	font-size: 14px;
   color:white;
@@ -923,17 +938,14 @@ p{
  	background-color: #81b3d2;
  	text-decoration: none;
  	padding: 4px 17px;
-
  }
 
 .hotel-info-part .link-dark{
 	background-color: #766357;
 }
  .hotel-rating{
-    display: flex;
-    align-items: flex-end;
-    position: relative;
 		float: right;
+
 }
 
 .hotel-rating-count {
@@ -945,26 +957,20 @@ p{
     text-align: center;
     padding-top: 3px;
     box-sizing: border-box;
+		margin-top: 42px;
 
 }
-
-.hotel-stars:before {
-    content: "";
-    width: 91px;
-    height: 20px;
-    background-image: url("../img/sprite.png");
-    background-repeat: repeat-x;
-		background-position: -5px -1388px;
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
+.hotel-stars{
+	width: 91px;
+	height: 22px;
+	background: url("../img/sprite-stars.png") no-repeat;
 }
 
-.hotel-stars:nth-child(2)::before {
-    width: 66px;
-}
+.second{
+	background-position: 0px -27px;
 
-.hotel-stars:nth-child(3)::before {
-    width: 43px;
+}
+.third{
+background-position: 0px -54px;
+
 }
